日本語に戻す

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>A story developing Scala with Emacs</title>
+    <title>EmacsでScala開発をしている話</title>
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
     <meta name="author" content="Bartek Szopka" />
 
@@ -20,104 +20,104 @@
 </div>
 <div id="impress">
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>A story developing Scala with Emacs</q>
+        <q>EmacsでScala開発をしている話</q>
     </div>
 
     <div class="step slide" data-x="0" data-y="-1500">
-      <q>Who are you?</q>
+      <q>自己紹介</q>
     </div>
 
     <div class="step slide" data-x="1000" data-y="-1500">
-      <q style="margin-top: 0px; margin-bottom: 30px; line-height: 30%;">Google <span style="color: red; font-weight: bold;">shigemk2</span></q>
-      <q style="margin-top: 0px; margin-bottom: 30px; line-height: 100%;">Site: <span style="color: red; font-weight: bold;">http://www.shigemk2.com</span></q>
-      <q style="margin-top: 0px; margin-bottom: 30px; line-height: 100%;">Working at Shibuya Mark City</q>
-      <q style="margin-top: 0px; margin-bottom: 30px; line-height: 100%;">Emacs and Scala</q>
+      <q style="margin-top: 0px; margin-bottom: 30px; line-height: 0%;"><span style="color: red; font-weight: bold;">shigemk2</span> でググってください</q>
+      <q style="margin-top: 100px; margin-bottom: 30px; line-height: 0%;">某shigemk2ブログ 毎日更新</q>
+      <q style="margin-top: 100px; margin-bottom: 30px; line-height: 0%;">最近転職した</q>
+      <q style="margin-top: 100px; margin-bottom: 30px; line-height: 0%;">EmacsでScalaを書いている</q>
       <img width="300" height="300" src="./img/shigemk2.jpg" />
     </div>
 
     <div class="step slide" data-x="2000" data-y="-1500">
-      <q style="font-size: 120%; line-height: 0;">This is briefing paper</q>
+      <q style="font-size: 120%; line-height: 0;">発表資料です</q>
       <q style="font-size: 80%; letter-spacing: 3px;">http://shigemk2.github.io/scala-matsuri-2016/</q>
     </div>
 
     <div class="step slide" data-x="3000" data-y="-1500">
-      <q>I'm talking about exhausting myself by Emacs</q>
+      <q>Scalaでの開発をEmacsでやっていて消耗している話をします</q>
     </div>
 
     <div class="step slide" data-x="4000" data-y="-1500">
-      <q>Common sense most Scala developpers use IDE.</q>
+      <q>Scala開発はだいたいIDEという風潮 というか常識</q>
     </div>
 
     <div class="step slide" data-x="5000" data-y="-1500">
-      <q>I want to beat this...</q>
+      <q>これを覆したい…</q>
     </div>
 
     <div class="step slide" data-x="6000" data-y="-1500">
-      <q>It's not my purpose.</q>
-      <q>This is just my hobby, way of life.</q>
-      <q>The Pragmatic Programmer</q>
+      <q>という意図はありません</q>
+      <q>趣味、というか生き方</q>
+      <q>達人プログラマー</q>
     </div>
 
     <div class="step slide" data-x="7000" data-y="-1500">
-      <q>Let's talk!!</q>
+      <q>でははじめましょう</q>
     </div>
 
     <div class="step slide" data-x="8000" data-y="-1500">
-      <q>Exhausted by machine</q>
+      <q>マシンで消耗</q>
     </div>
 
     <div class="step slide" data-x="9000" data-y="-1500">
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">ThinkPad Era(2013/12-2015/9)</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">ThinkPad時代(2013/12-2015/9)</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">OS: Fedora20</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Machine: ThinkPad X201</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">マシン: ThinkPad X201</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">CPU: Intel Core i5</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Memory: 4GB</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Junk item I bought in Akihabara</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">メモリ: 4GB</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">某所で買ったジャンク品</q>
     </div>
 
     <div class="step slide" data-x="10000" data-y="-1500">
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Macbook Era(2015/9-)</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Mac時代(2015/9-)</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">OS: Mac OSX Yosemite→El Capitan</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Machine: MacBook Pro 2011</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">マシン: MacBook Pro 2011</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">CPU: Intel Core i5</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Memory: 16GB(From 8GB)</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">This is an old machine</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">メモリ: 16GB(8GBから増設)</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">やっぱり古い</q>
     </div>
 
     <div class="step slide" data-x="11000" data-y="-1500">
-      <q>Why did I change my machine from ThinkPad to OLD Macbook</q>
+      <q>なぜ古いMacに移行したか</q>
     </div>
 
     <div class="step slide" data-x="12000" data-y="-1500">
-      <q>Bacause of the passion of the low spec machine</q>
+      <q>貧弱マシンの受難</q>
     </div>
 
     <div class="step slide" data-x="13000" data-y="-1500">
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">The passion of the low spec machine</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">My computer crashed when building Scala source code because of CPU's heat.</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">貧弱マシンの受難</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">Scalaビルド→CPU熱暴走でマシンが落ちる</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">$ ant clean build</q>
     </div>
 
     <div class="step slide" data-x="14000" data-y="-1500">
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">The passion of the low spec machine</q>
-      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">My computer crashed when starting ENSIME source code because of CPU's heat.</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">貧弱マシンの受難</q>
+      <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">ENSIME起動→CPU熱暴走でやっぱりマシンが落ちる</q>
       <q style="font-size: 45px; margin-top: 0px; margin-bottom: 30px; line-height: 1;">M-x ensime</q>
     </div>
 
     <div class="step slide" data-x="15000" data-y="-1500">
-      <q>WTF!! OMG!!</q>
+      <q>泣いた</q>
     </div>
 
     <div class="step slide" data-x="16000" data-y="-1500">
-      <q>Changed my PC from ThinkPad to old (but high spec) MacBook because I didn't have money enough.</q>
+      <q>お金がなかったので、とりあえず持っていた古い(でもスペックの高い)マシンに乗り換えることにした</q>
     </div>
 
     <div class="step slide" data-x="17000" data-y="-1500">
-      <q>Initialize Macbook without Time Machine because I use it hardly.</q>
+      <q>ほとんど使っていなかったので、TimeMachineも使わずにMacを初期化</q>
     </div>
 
     <div class="step slide" data-x="18000" data-y="-1500">
-      <q>Not crash using ENSIME with MacBook</q>
+      <q>ENSIMEを使っても落ちない</q>
     </div>
 
     <div class="step slide" data-x="19000" data-y="-1500">
@@ -125,15 +125,15 @@
     </div>
 
     <div class="step slide" data-x="20000" data-y="-1500">
-      <q><span style="color: red; font-weight: bold;">Use high spec machine when developping Scala</span></q>
+      <q>Scala開発のときは、スペックの高いマシンを使いましょう</q>
     </div>
 
     <div class="step slide" data-x="21000" data-y="-1500">
-      <q>About ENSIME</q>
+      <q>ENSIMEについて</q>
     </div>
 
     <div class="step slide" data-x="22000" data-y="-1500">
-      <q>Most Emacs users developping Scala use it. Maybe...</q>
+      <q>Emacs使いでScala使いならやっぱり基本</q>
     </div>
 
     <div class="step slide" data-x="23000" data-y="-1500">
@@ -141,69 +141,70 @@
     </div>
 
     <div class="step slide" data-x="24000" data-y="-1500">
-      <q>Please introduce me other libraries if you have.</q>
+      <q>他のあったら是非</q>
     </div>
 
     <div class="step slide" data-x="25000" data-y="-1500">
-      <q>Install</q>
-      <q>From melpa/Cask</q>
+      <q>インストール</q>
+      <q>melpaとかCaskとかから</q>
     </div>
 
     <div class="step slide" data-x="26000" data-y="-1500">
-      <q>Error after installing ENSIME</q>
+      <q>インストール</q>
       <q>check that sbt is on your PATH</q>
       <q>https://github.com/ensime/ensime-server/issues/670</q>
     </div>
 
     <div class="step slide" data-x="27000" data-y="-1500">
-      <q>Freezing when starting ENSIME with large repository</q>
-      <q>Kill ENSIME process</q>
+      <q>でかいリポジトリ</q>
+      <q>ときたまENSIME起動でフリーズ</q>
+      <q>ちょいちょいキルプロセス</q>
     </div>
 
     <div class="step slide" data-x="28000" data-y="-1500">
-      <q>Crash ENSIME when executing ensime-inspect-type-at-point</q>
-      <q>Change Emacs version from 25 to 24</q>
+      <q>ensime-inspect-type-at-pointで落ちる</q>
+      <q>→Emacs25から24にバージョンを落とした</q>
     </div>
 
     <div class="step slide" data-x="29000" data-y="-1500">
-      <q>Jumping definition</q>
-      <q>But there's no command being equal to IntelliJ Command + Alt + F7</q>
+      <q>定義ジャンプはとても便利</q>
+      <q>でもIntelliJ Command + Alt + F7がない</q>
     </div>
 
     <div class="step slide" data-x="30000" data-y="-1500">
-      <q>Checking compile error before compiling</q>
-      <q>Macro</q>
+      <q>コンパイルエラーが出るのも便利</q>
+      <q>マクロ</q>
     </div>
 
     <div class="step slide" data-x="31000" data-y="-1500">
-      <q>auto completion</q>
-      <q>M-, is not more convinient than IntelliJ</q>
+      <q>auto completionある</q>
+      <q>M-,はIntelliJほど便利じゃない</q>
     </div>
 
     <div class="step slide" data-x="32000" data-y="-1500">
-      <q>debugging</q>
+      <q>デバッグ</q>
     </div>
 
     <div class="step slide" data-x="33000" data-y="-1500">
-      <q>compile error</q>
-      <q>inspect type</q>
+      <q>コンパイルエラー</q>
+      <q>型確認</q>
       <q>auto completion</q>
     </div>
 
     <div class="step slide" data-x="34000" data-y="-1500">
-      <q>I want to use IDE.</q>
-      <q>For futre Emacs.</q>
+      <q>還元のためにIDEを使いたい</q>
     </div>
 
     <div class="step slide" data-x="35000" data-y="-1500">
-      <q>Summary</q>
-      <q>Emacs Never Die</q>
+      <q>まとめ</q>
+      <q>EmacsはNever Die</q>
     </div>
 
     <div class="step slide" data-x="36000" data-y="-1500">
-      <q>THE END</q>
+      <q>おしまい</q>
       <q><S>No One Lives Forever</S></q>
     </div>
+
 </div>
 <div class="hint">
     <p>Use a spacebar or arrow keys to navigate</p>
